# gppu

./: .gitignore  2DO.md  AD.md  AGENTS.md  CHANGELOG.md  CHROME.md  CLAUDE.md  Cargo.toml  DATA.md  GPPU_MIGRATION.md  GPRU_LLM_TESTING.md  IOT.md  OLD_VERSION.md  README.md  RUST_PORT.md  TUI.md  USAGE.md  VAULT.md  __init__.py  gppu.py  gppu_2.12.2.250213.py  gppu_3.0.0.250316.py  pyproject.toml  pyrightconfig.json  requirements.txt  rewrite-authors.sh  test_rich_refactor.py
.claude/: settings.local.json
.github/workflows/: ci.yml  gppu-dev.yml  gppu.yml  release.yml  rust-branch-build.yml  statusline-release.yml  statusline.yml  test.yml  version.yml  w11-release.yml  w11.yml
badges/: gppu.json  statusline.json  w11.json
crates/gpru/: Cargo.toml
crates/gpru/src/: lib.rs  safe.rs
crates/gpru/tests/: y2_parity.rs
crates/statusline/: Cargo.toml
crates/statusline/src/: lib.rs
crates/w11/: Cargo.toml
crates/w11/src/: lib.rs
docs/: RELEASE.md  legacy-async.md
examples/: tui_demo.py
gppu/: __init__.py  ad.py  app.py  chrome.py  data.py  gppu.py  iot.py  vault.py  ymro.py
gppu/tui/: __init__.py  cache.py  config_editor.py  debug.py  icons.py  launcher.py  loaders.py  modals.py  progress.py  selectors.py  tree.py  workers.py
gppu/tui/viz/: __init__.py  heatmap.py
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
rust/: README.md
rust/crates/gpru/src/: dict.rs  time.rs  y2.rs  yaml.rs
rust/crates/gpru/tests/: port_parity.rs
src/gppu/: gppu.py
statusline/: __init__.py  __main__.py  cache.py  stats.py  status_line.py
tests/: conftest.py  test_async.py  test_async_iot.py  test_dc.py  test_deepget.py  test_diskcache.py  test_expr.py  test_format.py  test_full_path.py  test_iot.py  test_logger.py  test_os.py  test_pcp.py  test_persistent_dc.py  test_safe_types.py  test_string.py  test_template.py  test_time.py  test_tracer.py  test_tui.py  test_tui_cache.py  test_tui_debug.py  test_tui_heatmap.py  test_tui_icons.py  test_tui_progress.py  test_tui_tree.py  test_vault.py  test_y2types.py  test_yaml.py
w11/: Alex-PC.yaml  OD4B-Sync-Diagnostics.md  README.md  __init__.py  __main__.py  app.py  event_categories.yaml  pyproject.toml  requirements.txt  w11-events.md  w11-events.py  w11-events.yaml  w11-onedrive.md  w11-onedrive.py  w11-onedrive.yaml  w11.py
w11/default_config/: error_rules.yaml  w11-onedrive.yaml  w11.yaml
