[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gppu"
dynamic = ["version"]
description = "General Purpose Python Utilities"
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
]

[project.optional-dependencies]
pg = ["psycopg2-binary"]
sql = ["sqlalchemy"]
all = ["psycopg2-binary", "sqlalchemy"]
test = ["pytest"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
