[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gppu"
dynamic = ["version"]
description = "General Purpose Python Utilities"
requires-python = ">=3.11"
dependencies = [
    "PyYAML",
]

[project.optional-dependencies]
pg = ["psycopg2-binary"]
sql = ["sqlalchemy"]
cache = ["diskcache"]
chrome = ["selenium>=4.0.0"]
statusline = ["jinja2"]
tui = ["textual"]
serve = ["textual-serve"]
all = ["psycopg2-binary", "sqlalchemy", "diskcache", "selenium>=4.0.0", "jinja2", "textual", "textual-serve"]
test = ["pytest"]
test-tui = ["pytest", "pytest-asyncio", "textual"]

[project.scripts]
statusline = "statusline.status_line:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["."]
include = ["gppu*", "statusline*", "w11*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
