[package]
name = "gpru"
version = "3.5.0-alpha.1"
edition = "2021"
description = "General Purpose Rusty Utilities (ЖПRU)"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
regex = "1"
